--- a/x10.man/paper/paper.tex
+++ b/x10.man/paper/paper.tex
@@ -76,7 +76,7 @@ Green Hall, Room 214, Denver CO, 80208 USA}}{}
 \subsection{Related work}\label{sec:related}
 \input{related}
 
-\section{Constrained FJ}\label{sec:lang}
+\section{Constrained Types and their formalization}\label{sec:lang}
 %II. Language design and rules (CFJ) (3.5 pages)
 
 \input{lang}
