--- a/x10.man/paper/intro.tex
+++ b/x10.man/paper/intro.tex
@@ -353,7 +353,7 @@ $$\class\ {\tt C}(\bar{\tt T}\ \bar{\tt x} : c)\extends\ D(:d)\ \{\bar{M}\}$$
 
 $$\rc({\tt C},{\tt X}) \leftrightarrow 
 \begin{array}{l}
-\quad ({\tt c},{\tt d})[{\tt X}/\this] \&   \rc({\tt D}) \& \\
+\quad ({\tt c},{\tt d})[{\tt X}/\this] \&   \rc({\tt D},{\tt X}) \& \\
 \quad \rc({\tt P}_1, {\tt X.x}_1)\& \ldots, \& \rc({\tt P}_k, {\tt X.x}_k)
 \end{array}
 $$
