--- a/x10.man/paper/master.bib
+++ b/x10.man/paper/master.bib
@@ -2933,7 +2933,7 @@ year = 1993
 
 @inproceedings{foster-popl02,
         Author = {Jeffrey S. Foster and Tachio Terauchi and Alex Aiken},
-        Booktitle = POPL02,
+        booktitle = "Proceedings of the 29th {ACM} {SIGPLAN}--{SIGACT} Symposium on Principles of Programming Languages ({POPL})",
         Location = {Berlin, Germany},
         Month = jun,
         Pages = {1--12},
@@ -2945,6 +2945,7 @@ year = 1993
  author = {Hassan Ait-Kaci},
  title = {A lattice theoretic approach to computation based on a calculus of partially ordered type structures (property inheritance, semantic nets, graph unification)},
  year = {1984},
+  School = "University of Pennsylvania",
  order_no = {AAI8505030}},
  }
 @article{calc-constructions,
