--- a/trunk/x10.man/paper/examples.tex
+++ b/trunk/x10.man/paper/examples.tex
@@ -350,15 +350,15 @@ A programmer can require that a method may be invoked only if the
 invoking activity is registered on the clocks $\bar{\tt k}$ by adding
 a {\tt clocked} clause. The rule for method elaboration and method invocation then change:
 $$
-\begin{array}{ll}
+\begin{array}{l}
 \from{ \bar{\tt T}\ \bar{\tt x}, {\tt C}\ \this, {\tt c},\clocked(\bar{\tt k}) \vdash {\tt S}\ {\tt e}, {\tt S} \subtype {\tt T} }   
 \infer{\tt T\ m(\bar{\tt T}\,\bar{\tt x} : c) \clocked(\bar{\tt k})\{\return\ e;\}\ \mbox{OK in}\ C} 
-& 
+\\ \quad\\ 
 \rname{T-Invk}%
-\from{\begin{array}{ll}
-\Gamma \vdash {\tt T}_{0:n} \ {\tt e}_{0:n}  &
+\from{\begin{array}{l}
+\Gamma \vdash {\tt T}_{0:n} \ {\tt e}_{0:n}  \\
 \mtype({\tt T}_0,{\tt m},{\tt z}_0)= \tt {\tt Z}_{1:n}\ {\tt z}_{1:n}:c,clocked(\bar{\tt k}) \rightarrow {\tt S} \\
-\Gamma, {\tt T}_{0:n}\ {\tt z}_{0:n} \vdash {\tt T}_{1:n} \subtype {\tt Z}_{1:n}&
+\Gamma, {\tt T}_{0:n}\ {\tt z}_{0:n} \vdash {\tt T}_{1:n} \subtype {\tt Z}_{1:n}\\
 \sigma(\Gamma, {\tt T}_{0:n}\ {\tt z}_{0:n}) \vdash_{\cal C} {\tt c} \ \ \ 
 \mbox {(${\tt z}_{0:n}$ fresh)} \\
 \Gamma \vdash \clocked(\bar{\tt k})\\
