--- a/x10.man/paper/examples.tex
+++ b/x10.man/paper/examples.tex
@@ -1,4 +1,4 @@
-%III. Applied constrained calculii. (3 pages)
+%III. Applied constrained calculi. (3 pages)
 %
 %For each example below, formal static and dynamic semantics rules for
 %new constructs extension over the core CFJ. Subject-reduction and
@@ -120,7 +120,7 @@ interface Array<T>(int(:self >= 0) length) {
 
 Bounds can be checked using a constraint system based on
 Presburger arithmetic~\cite{omega}.  Constraint terms include
-integer constrants, scalar multiplication, and addition;
+integer constraints, scalar multiplication, and addition;
 constraints include inequalities:
 
 \begin{tabular}{rrcl}
@@ -391,7 +391,7 @@ $$
 \eat{
 \subsection{Capabilities}
 
-Capablities (from Radha and Vijay's paper on neighborhoods)
+Capabilities (from Radha and Vijay's paper on neighborhoods)
 }
 
 \subsection{Activity-local objects}
@@ -548,7 +548,7 @@ Additional rules need to be imposed to enforce the ``owners as
 dominators'' property.
 
 If a class subclasses {\tt Owned}, its owner parameters must
-be transitivly owned themselves by the {\tt owner} property.
+be transitively owned themselves by the {\tt owner} property.
 
 Second, permit this to be visible only within the current
 object.
