--- a/x10.man/paper/intro.tex
+++ b/x10.man/paper/intro.tex
@@ -172,7 +172,7 @@ ensures that {\tt this.region.rank=this.rank}. Similarly, an array has
 properties {\tt dist}, {\tt region}, and {\tt rank}
 and appropriate constraints ensuring that the statically available
 information about them is consistent.\footnote{All constraint
-languages used in constrained types permit object referencs, field
+languages used in constrained types permit object references, field
 selection and equality. Such constraint systems have been studied
 extensively under the name of ``feature structures''
 \cite{feature-structures}.}
@@ -221,7 +221,7 @@ dependent types. We discuss in more detail in
 Section~\ref{method-sec}. In summary, our current implementation
 erases dependent type information when compiling to Java. Therefore it
 must be the case that a class does not have two different method
-definitions which conflict with each other when the constrained
+definitions that conflict with each other when the constrained
 clauses in their types are erased.
 
 \paragraph{Invariants.}
@@ -459,7 +459,7 @@ implemented separately~\cite{ns07-x10anno}.
 We claim the design is clean and modular. We present a simple core
 language \CFJ, extending \FJ{}~\cite{FJ} with constrained types on top
 of an arbitrary constraint system. We present rules for type-checking
-\CFJ{} programs that are parameteric in the constraint system. 
+\CFJ{} programs that are parametric in the constraint system. 
 We establish subject reduction and progress theorems. 
 
 %
