--- a/x10.man/paper/semantics.tex
+++ b/x10.man/paper/semantics.tex
@@ -93,7 +93,7 @@ and subject to alpha-renaming.  The definitions of \mtype, \mbody,
 constraint.  For a substitution $\theta$ we define $\mtype({\tt
 T},{\tt m},\theta)$ as the signature obtained by applying $\theta$ to
 $\mtype({\tt T},{\tt m})$, renaming bound variables as necessary.
-Similarlly, for a substitution $\theta$ we define $\fields({\tt
+Similarly, for a substitution $\theta$ we define $\fields({\tt
 T},\theta)$ to be $\bar{S}\theta\ \bar{f}$, if the sequence of
 inherited and defined fields of the class underlying the type {\tt T}
 is $\bar{S}\ \bar{f}$. We let $\fields({\tt T},{\tt x})$ stand for
